--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
     <header>
         <h1 >Check Out My JavaScript Basics Course Practice exercise</h1>
-        <p>My name is Vishwjeet Ramesh Ujgare.</p>
+        <p>name is Vishwjeet Ramesh Ujgare.</p>
         <p>Email: <a href="mailto:vrvishwujgare@gmail.com">vrvishwujgare@gmail.com</a></p>
     </header>
 
@@ -70,7 +70,7 @@
             </ul>
             <h3>Provided Problem Statements for : JavaScript Basic Challeges 1 To 9</h3>
             <iframe src="javascript basic challenges 01-09/challenges_List/Javascript Basic Challenges 01_09.pdf"
-                width="60%" height="650px"></iframe>
+                width="60%" height="600px"></iframe>
 
         </div>
 
@@ -94,7 +94,7 @@
             </ul>
             <h3>Provided Problem Statements for :JavaScript DOM Challeges 17 To 21</h3>
             <iframe src="JavaScript DOM Challenges 17 - 21/challenges_List/challenge 17_21.pdf" width="60%"
-                height="650px"></iframe>
+                height="600px"></iframe>
 
         </div>
     </section>
@@ -118,7 +118,7 @@
             </ul>
             <h3>Provided Problem Statements for : Javascript Event Handling 22 To 30</h3>
             <iframe src="JavaScript Event Challenges 22-30/challenge_list_22_30/challenge_event_22_30.pdf" width="60%"
-                height="650px"></iframe>
+                height="600px"></iframe>
         </div>
     </section>
 
